src/keyguard.css
@import '/libraries/nimiq-style/nimiq-style.css';
@import '/secure-elements/x-router/x-router.css';
@import '/secure-elements/x-loading-animation/x-loading-animation.css';
@import '/secure-elements/x-passphrase-setter/x-passphrase-setter.css';
@import '/secure-elements/x-mnemonic-input/x-mnemonic-input.css';
@import '/secure-elements/x-mnemonic-phrase/x-mnemonic-phrase.css';
@import '/secure-elements/x-validate-words/x-validate-words.css';
@import '/secure-elements/x-privacy-agent/x-privacy-agent.css';
@import '/secure-elements/nimiq-logo/nimiq-logo.css';
@import '/secure-elements/x-account-backup-import/x-account-backup-import.css';
@import '/secure-elements/x-loader/x-loader.css';
@import '/secure-elements/x-pinpad/x-pinpad.css';
@import './common-elements/x-account.css';
@import './common-elements/x-authenticate.css';
@import './common-elements/x-download-file.css';
@import './common-elements/x-set-label.css';
@import './common-elements/x-show-words.css';
@import 'common-elements/x-identicons/x-identicons.css';
@import './requests/sign-safe/x-sign-safe.css';
@import './requests/sign-wallet/x-sign-wallet.css';
@import '/secure-elements/x-dot-loader/x-dot-loader.css';

.header-top {
    width: 100%;
    padding: 1em 1.8em;
    overflow: auto;
}

@media (max-width: 480px) {
    .header-top {
        width: auto;
        padding: 1em 0.5em;
    }

    .header-top nimiq-logo {
        width: auto;
    }
}

#app {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    width: 98vw;
    max-width: var(--max-width);
    min-height: calc(100vh - 60px);
    padding-bottom: 18px;
}

#app > * > * {
    flex-direction: column;
    align-items: center;
}

[x-route] {
    width: 100%;
    min-height: calc(100vh - 120px);
}

[x-route] [x-route] {
    min-height: unset;
}

[x-route] > * {
    flex-shrink: 0;
}

/* make code blocks look like keys on the keyboard */
code {
    font-family: monospace;
    font-size: 15px;
    border: 1px solid white;
    padding: 2px 6px;
    border-radius: 5px;
}

.x-loading {
    position: absolute;
    left: 0;
    top: 0;
    display: flex;
    flex-flow: column;
    height: 100vh;
    width: 100vw;
    align-items: center;
    justify-content: center;
    background: rgba(0, 0, 0, 0.6);
}

/* h1 {
    margin-top: 56px;
} */

.pad-bottom {
    padding-bottom: 28px;
}

x-identicon {
    display: block;
    height: 160px;
    width: 160px;
}

